add(29th of june) add some style

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -269,11 +269,15 @@ select {
 .clear-btn::part(native) {
   background: rgb(47, 214, 225);
   padding: 1rem !important;
+  color: #dddddd;
+    background-color: #535353;
 }
 
 .apply-btn::part(native) {
   // background: rgb(203, 35, 203);
   padding: 1rem !important;
+  color: #dddddd;
+    background-color: #535353;
 }
 
 .save::part(native) {
