refactor sub_menu data

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -61,13 +61,13 @@
                   Save As New Preset
                 </li>
                 <!-- (click)="updateCurrentPreset()" -->
-                <li class="dropdown-item" (click)="saveAsNewPreset()">
+                <li class="dropdown-item" (click)="updateCurrentPreset()">
                   Update Current Preset
                 </li>
                 <li class="dropdown-item" (click)="deletePreset()">
                   Delete Preset
                 </li>
-                <li class="dropdown-item" (click)="clearFilter()">
+                <li class="dropdown-item" (click)="clearfilter2()">
                   Clear presets
                 </li>
               </ul>
