--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -67,7 +67,7 @@
                 <li class="dropdown-item" (click)="deletePreset()">
                   Delete Preset
                 </li>
-                <li class="dropdown-item" (click)="clearfilter2()">
+                <li class="dropdown-item" (click)="clearfilter()">
                   Clear presets
                 </li>
               </ul>
@@ -317,7 +317,7 @@
                 <li class="dropdown-item" (click)="deletePreset()">
                   Delete Preset
                 </li>
-                <li class="dropdown-item" (click)="clearfilter2()">
+                <li class="dropdown-item" (click)="clearfilter()">
                   Clear presets
                 </li>
               </ul>
